# SDR

./: CLAUDE.md  Dockerfile  README.md  pyproject.toml
app/: config.py  deps.py  main.py
app/adapters/: claude_llm.py  gemini_embedder.py  gemini_llm.py
app/api/: routes_chat.py  routes_compare.py  schemas.py
app/chat/: cross_doc.py  graph.py  retriever.py  single_doc.py
app/comparison/: explainer.py  judge.py  pipeline.py  ranker.py
app/domain/: chat.py  chunk.py  comparison.py  section.py  summary.py  verdict.py
app/parsing/: pdf_parser.py
app/ports/: embedder.py  llm.py  vector_store.py
app/prompts/: chat_synthesis.py  missing_explainer.py  pairwise_judge.py  top10_ranker.py
scripts/: containerized_demo.py  demo.py  health_check.py  run_comparison.py
tests/: conftest.py
tests/adapters/: test_claude_llm.py  test_gemini_embedder.py  test_gemini_llm.py  test_pinecone_store.py
tests/api/: test_routes_chat.py  test_routes_compare.py
tests/fakes/: __init__.py  fake_embedder.py  fake_llm.py  fake_vector_store.py
tests/fixtures/: __init__.py  parsed_docs.py
tests/integration/: test_pipeline_e2e.py
tests/parsing/: test_docx_parser.py  test_pdf_parser.py
tests/unit/: test_aligner.py  test_assembler.py  test_chat_graph.py  test_chat_synthesis.py  test_chunker.py  test_config.py  test_cross_doc_chat.py  test_domain_models.py  test_explainer.py  test_judge.py  test_pipeline.py  test_ranker.py  test_retriever.py  test_single_doc_chat.py
