[project]
name = "fds-reconciler"
version = "0.1.0"
description = "AI-powered FDS comparison and chat system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.28",
    "google-genai>=0.7",
    "pinecone>=4.1",
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "langgraph>=0.1",
    "langchain-core>=0.2",
    "tiktoken>=0.7",
    "python-Levenshtein>=0.25",
    "httpx>=0.27",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: opt-in tests that hit real APIs (deselected by default)"]
addopts = "-v --tb=short -m 'not integration'"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]